# py-packaging

./: setup.py
learnpkg-0.1.0/: PKG-INFO  pyproject.toml
src/learnpkg.egg-info/: SOURCES.txt
